charts/istio-ingress/tests/snapshots/test_istio_ingress/test_chart_rendering/chart_snapshot.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingress
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: istio-ingress-0.1.3
  name: release-name-istio-ingress-gateway
  namespace: dev-testing
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - '*'
    name: http
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingress
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: istio-ingress-0.1.3
  name: release-name-istio-ingress-vs
  namespace: dev-testing
spec:
  gateways:
  - release-name-istio-ingress-gateway
  hosts:
  - ''
